# chesse

./: .gitignore  CMakeLists.txt  flake.nix
src/: bitboard.cpp  bitboard.h  chessboard.cpp  chessboard.h  constants.h  evaluation.cpp  evaluation.h  game.cpp  move.h  movegen.cpp  movegen.h  search.cpp  search.h  square.h  tables.cpp  tables.h  uci.cpp  uci.h
